export const snapshot = {};

snapshot[`imagick plugin 1`] = `5`;

snapshot[`imagick plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".jpg",
      pageType: "asset",
    },
    {
      includesPath: undefined,
      key: ".jpeg",
      pageType: "asset",
    },
    {
      includesPath: undefined,
      key: ".png",
      pageType: "asset",
    },
  ],
}
`;

snapshot[`imagick plugin 3`] = `
{
  content: "Uint8Array(14355)",
  data: {
    content: "Uint8Array(29014)",
    imagick: [
      {
        blur: 10,
        resize: 20,
        suffix: "-small",
      },
      {
        blur: 10,
        resize: 20,
        suffix: "-big",
      },
      {
        format: "jpg",
      },
      {
        format: "webp",
      },
      {
        format: "png",
      },
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.png",
  },
  dest: {
    ext: ".png",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume",
  },
}
`;

snapshot[`imagick plugin 4`] = `
{
  content: "Uint8Array(899)",
  data: {
    content: "Uint8Array(29014)",
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume-small.png",
  },
  dest: {
    ext: ".png",
    path: "/lume-small",
  },
  src: {
    ext: ".png",
    path: "/lume[0]",
  },
}
`;

snapshot[`imagick plugin 5`] = `
{
  content: "Uint8Array(899)",
  data: {
    content: "Uint8Array(29014)",
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume-big.png",
  },
  dest: {
    ext: ".png",
    path: "/lume-big",
  },
  src: {
    ext: ".png",
    path: "/lume[1]",
  },
}
`;

snapshot[`imagick plugin 6`] = `
{
  content: "Uint8Array(1231)",
  data: {
    content: "Uint8Array(29014)",
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.jpg",
  },
  dest: {
    ext: ".jpg",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume[2]",
  },
}
`;

snapshot[`imagick plugin 7`] = `
{
  content: "Uint8Array(8648)",
  data: {
    content: "Uint8Array(29014)",
    imagick: undefined,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.webp",
  },
  dest: {
    ext: ".webp",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume[3]",
  },
}
`;
